fixed scrollbar on graph + circle new views or notes added (still need to adjust styling)

--- a/src/css/Graph.css
+++ b/src/css/Graph.css
@@ -1,3 +1,17 @@
+html, body {
+  margin: 0;
+  padding: 0;
+}
+
+#root, #sub-root {
+  height: 100%
+}
+
+#container-fluid-for-view-js {
+  height: 100%;
+  overflow-y: hidden;
+}
+
 .__________cytoscape_container {
   background-image: none;
   background-color: white;
